# deepsysid

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
deepsysid/: execution.py  interval.py  utils.py
deepsysid/cli/: interface.py  training.py
deepsysid/models/: base.py  linear.py  narx.py  recurrent.py
deepsysid/models/hybrid/: bounded_residual.py  physical.py  semiphysical.py
deepsysid/networks/: fnn.py  loss.py  rnn.py
examples/: example_configuration.template.json  patrol_ship.template.json  patrolship.json
multistep_sysid/: execution.py
multistep_sysid/models/: base.py  hybrid.py  hybrid_extensive.py  hybrid_first_principles.py  hybrid_semiphysical.py  linear.py  narx.py  recurrent.py
multistep_sysid/models/hybrid/: bounded_residual.py
multistep_sysid/networks/: first_principles.py  fnn.py  loss.py
scripts/: build_grid_search_configuration.py  evaluate_4dof_ship_trajectory.py  evaluate_model.py  evaluate_model_thresholds.py  evaluate_model_trajectory.py  evaluate_quadcopter_model_trajectory.py  evaluate_quadcopter_trajectory.py  test_model.py  test_model_on_training.py  test_model_thresholds.py  train_model.py  write_model_names.py
scripts/preprocessing/: preprocess_patrolship.py  preprocess_pelican.py
src/deepsysid/: execution.py  utils.py
src/deepsysid/cli/: download.py  evaluation.py  interface.py  preprocess_pelican.py  testing.py  training.py
src/deepsysid/explainability/: base.py  explainers.py  metrics.py
src/deepsysid/explainability/explainers/: blackbox.py  lime.py  switching.py  utils.py
src/deepsysid/metrics/: __init__.py  base.py  error.py  score.py  trajectory.py
src/deepsysid/models/: base.py  datasets.py  linear.py  narx.py  recurrent.py  switching.py  utils.py
src/deepsysid/models/hybrid/: bounded_residual.py  component_interfacing.py  physical.py  physics_only.py  semiphysical.py  serial.py
src/deepsysid/models/linear/: __init__.py  arx.py  kernel.py  normalization.py  regression.py  regularized.py  unregularized.py
src/deepsysid/models/recurrent/: __init__.py  constrained_rnn.py  joint_initialization.py  separate_initialization.py  washout_initialization.py
src/deepsysid/models/switching/: klinreg.py  switchrnn.py
src/deepsysid/networks/: fnn.py  loss.py  rnn.py  switching.py  utils.py
src/deepsysid/pipeline/: configuration.py  data_io.py  evaluation.py  explaining.py  gridsearch.py  metrics.py  model_io.py  testing.py  training.py
src/deepsysid/pipeline/metrics/: __init__.py
src/deepsysid/pipeline/testing/: __init__.py  base.py  bibo_stability.py  bounded_residual.py  incremental_stability.py  inference.py  io.py  runner.py  stability.py
src/deepsysid/pipeline/testing/stability/: base.py  bibo.py  incremental.py
src/deepsysid/tracker/: base.py  configuration.py  event_data.py  mlflow.py  mlflow_integration.py
tests/: test_metrics.py
tests/ruihu_tests/: test.py
tests/smoke_tests/: pipeline.py  test_experiment_session_manager.py  test_explain_pipeline.py  test_linear_model.py  test_pipeline.py  test_train_test_evaluate_pipeline.py
tests/unit_tests/: test_data_io.py  test_download.py  test_execution.py  test_get_parameter_count.py  test_io.py  test_metrics.py  test_networks.py
