[tool.poetry]
name = "deepsysid"
version = "0.1.0"
description = "A system identification toolkit for multistep prediction using deep learning and hybrid methods."
authors = ["Alexandra Baier <alx.baier@gmail.com>"]
readme = "README.md"
packages = [{include = "deepsysid"}]
license = "MIT"
repository = "https://github.com/AlexandraBaier/deepsysid"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pydantic = "^1.9.1"
scikit-learn = "^1.1.1"
h5py = "^3.7.0"
pandas = "^1.4.2"
torch = { version="^1.11.0", optional = true }
cvxpy = "^1.2.1"

[tool.poetry.extras]
torch-cpu = ["torch"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
deepsysid="deepsysid.cli.interface:run_deepsysid_cli"
deepsysid-evaluate-quadcopter-trajectory = "deepsysid.cli.evaluate_quadcopter_trajectory:main"
deepsysid-evaluate-4dofship-trajectory = "deepsysid.cli.evaluate_4dof_ship_trajectory:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.mypy]
ignore_missing_imports = true
