[tool.poetry]
name = "deepsysid"
version = "0.1.11"
description = "A system identification toolkit for multistep prediction using deep learning and hybrid methods."
authors = ["Alexandra Baier <alx.baier@gmail.com>", "Daniel Frank <daniel@familiefrank.eu>"]
readme = "README.md"
packages = [{include = "deepsysid", from = "src"}]
license = "MIT"
repository = "https://github.com/AlexandraBaier/deepsysid"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.5"
pydantic = "^1.9.1"
scikit-learn = "^1.1.1"
h5py = "^3.7.0"
pandas = "^1.4.2"
torch = { version = "1.11.0", optional = true }
cvxpy = "^1.2.1"
pyDataverse = "^0.3.1"
requests = "^2.28.1"
types-requests = "^2.28.10"
rarfile = { version = "^4.0" }
scipy = { version = "^1.9.3" }
mlflow = { version = "^2.3.0", optional = true }
matplotlib = { version = "^3.7.1", optional = true }

[tool.poetry.extras]
torch-cpu = ["torch"]
mlflow-logging = ["mlflow", "matplotlib"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.982"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pre-commit = "^2.20.0"
coverage = "^6.4.3"

[tool.poetry.scripts]
deepsysid="deepsysid.cli.interface:run_deepsysid_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning"
]
