[tool.poetry]
name = "deepsysid"
version = "0.1.24"
description = "A system identification toolkit for multistep prediction using deep learning and hybrid methods."
authors = ["Alexandra Baier <alx.baier@gmail.com>", "Daniel Frank <daniel@familiefrank.eu>"]
readme = "README.md"
packages = [{include = "deepsysid", from = "src"}]
license = "MIT"
repository = "https://github.com/AlexandraBaier/deepsysid"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pydantic = "^2.6.0"
scikit-learn = "^1.1.1"
h5py = "^3.7.0"
pandas = "^2.2.0"
torch = { version = "^2.2.0", optional = true }
cvxpy = "^1.2.1"
pyDataverse = "^0.3.1"
requests = "^2.28.1"
types-requests = "^2.28.10"
rarfile = { version = "^4.0" }
scipy = { version = "^1.13.0" }
mlflow = { version = "^2.3.0", optional = true }
matplotlib = { version = "^3.7.1", optional = true }
interpret = "^0.6.0"

[tool.poetry.extras]
torch-cpu = ["torch"]
mlflow-logging = ["mlflow", "matplotlib"]

[tool.poetry.dev-dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
isort = "^5.10.1"
flake8 = "^7.0.0"
pytest = "^8.1.0"
pre-commit = "^3.7.0"
coverage = "^7.4.0"

[tool.poetry.scripts]
deepsysid="deepsysid.cli.interface:run_deepsysid_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = 1

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = [ "numpy.typing.mypy_plugin" ]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning"
]
